:wrench: [styles] fix image width and slider spacing on editorial block

--- a/base-style.scss
+++ b/base-style.scss
@@ -8395,7 +8395,7 @@ input:checked ~ label .map-grid__store-info {
     width: 50%;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   body {
     width: 100vw;
   }
