--- a/src/styles/campaign-editorial.scss
+++ b/src/styles/campaign-editorial.scss
@@ -54,9 +54,15 @@
                     height: 100%;
                 }
                 &.show-less-content {
-                    overflow: hidden;
                     height: 146px;
+                    overflow: hidden;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 6;
+                    -webkit-box-orient: vertical
                 }
+            }
+            @include breakpoint-min($bp-large) {
+                max-width: 540px;
             }
         }
 
@@ -142,7 +148,7 @@
         }
 
         @include breakpoint-max($bp-small) {
-            min-height: 270px;
+            min-height: 250px;
         }
 
         // @include breakpoint-max($bp-large) {
